--- a/landing_page.html
+++ b/landing_page.html
@@ -20,7 +20,7 @@
                 <li><a href="#welcome">Welcome</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#features">Features</a></li>
-                <li><a href="#contact">Others</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
         <!--Showcase-->
@@ -65,10 +65,10 @@
                 <a href="second.html" >More coming up soon!</a>
             </div>
         </section>
-        <section id="others">
+        <section id="contact">
             <h2>Learn about our developer</h2>
             <div class="iframe-container">
-                <iframe width="560" height="315" src="https://www.jinerzheng.com/" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+                <iframe width="560" height="315" src="https://www.jinerzheng.com/" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
         <div class="acknowledgement">
