--- a/landing_page.html
+++ b/landing_page.html
@@ -15,14 +15,14 @@
     </head>
     <body>
         <!--Navigation bar-->
-        <nav>
+        <div id="navbar" class="navbar">
             <ul>
                 <li><a href="#welcome">Welcome</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#features">Features</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-        </nav>
+        </div>
         <!--Showcase-->
         <header id="home">
             <!--Center Text-->
