change bg color

--- a/landing_page.html
+++ b/landing_page.html
@@ -15,16 +15,16 @@
     </head>
     <body>
         <!--Navigation bar-->
-        <div id="navbar" class="navbar">
+        <nav>
             <ul>
                 <li><a href="#welcome">Welcome</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#features">Features</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-        </div>
+        </nav>
         <!--Showcase-->
-        <header id="home">
+        <header id="welcome">
             <!--Center Text-->
             <h1>Start You Music Adventure on Sound Paradise.</h1>
             <a href="#about" class="buttom"><p>About Us</p></a>
@@ -73,7 +73,7 @@
         </section>
         <div class="acknowledgement">
             <h3>Acknowledgement</h3>
-            <p>“This site was designed and published as part of the COMP
+            <p>This site was designed and published as part of the COMP
                 333 Software Engineering class at Wesleyan University. The described platform is not publicly
                 available but rather is created as a training exercise.</p>
         </div>
