--- a/landing_page.html
+++ b/landing_page.html
@@ -26,8 +26,8 @@
         <!--Showcase-->
         <header id="welcome">
             <!--Center Text-->
-            <h1>Start You Music Adventure on Sound Paradise.</h1>
-            <a href="#about" class="buttom"><p>About Us</p></a>
+            <h1>Start Your Music Adventure on Sound Paradise.</h1>
+            <a href="#about" class="buttom"><p>Join Soundparadise</p></a>
         </header>
         <section id="about">
             <h2>Welcome to Sound Paradise!</h2>
@@ -66,8 +66,8 @@
             </div>
         </section>
         <section id="contact">
-            <h2>Learn about our developer</h2>
             <div class="iframe-container">
+                <h2>Learn about our developer</h2>
                 <iframe width="560" height="315" src="https://www.jinerzheng.com/" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
