--- a/landing_page.html
+++ b/landing_page.html
@@ -66,8 +66,8 @@
             </div>
         </section>
         <section id="contact">
-            <div class="iframe-container">
-                <h2>Learn about our developer</h2>
+            <h2 class="white-col">Learn about our developer</h2>
+            <div class="iframe-container"> 
                 <iframe width="560" height="315" src="https://www.jinerzheng.com/" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
