--- a/landing_page.html
+++ b/landing_page.html
@@ -1,5 +1,5 @@
 <!-- 
-    COMP 333: Software Engineering HW1
+    COMP 333: Software Engineering HW1 landing page
     Jiner Zheng (jzheng@wesleyan.edu)
 -->
 <!DOCTYPE html>
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Online Music Rating Platform Landing Page">
+        <meta name="description" content="Sound Paradise Landing Page">
         <meta name="keywords" content="music, rating">
         <meta name="author" content="Jiner Zheng">
         <link rel="stylesheet" href="style.css">
@@ -66,7 +66,7 @@
             </div>
         </section>
         <section id="contact">
-            <h2 class="white-col">Learn about our developer</h2>
+            <h2 style="color:white;">Learn about our developer</h2>
             <div class="iframe-container"> 
                 <iframe width="560" height="315" src="https://www.jinerzheng.com/" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
