--- a/landing_page.html
+++ b/landing_page.html
@@ -62,11 +62,11 @@
                 </div>
             </div>
             <div class="box">
-                <a href="second.html" >More coming up soon!</a>
+                <a href="second_page.html" >More coming up soon!</a>
             </div>
         </section>
         <section id="contact">
-            <h2 style="color:white;">Learn about our developer</h2>
+            <h2>Learn about our developer</h2>
             <div class="iframe-container"> 
                 <iframe width="560" height="315" src="https://www.jinerzheng.com/" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
