update second page

--- a/second_page.html
+++ b/second_page.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <p>More features comming up soon. Click to return to the <a href="landing_page.html">
-        main page</p>.
+    <p>More features coming up soon. Click to return to the <a href="landing_page.html">
+        main page.</p>
 </body>
 </html>
